# hermes-claude

./: AGENTS.md  LICENSE  README.md  REVIEW_AND_PLAN.md  plugin.yaml  pyproject.toml
plugins/hermes-claude-code/: README.md  __init__.py  plugin.yaml
plugins/model-providers/hermes-claude-code/: README.md  __init__.py  plugin.yaml
src/hermes_claude_code/: __init__.py  bridge.py  cli.py  config.py  diagnose.py  doctor.py  install.py  mcp_server.py  models_probe.py  plugin.py  provider.py  proxy.py  runtime.py
tests/: conftest.py  test_chat_completions_nonstream.py  test_chat_completions_stream.py  test_claude_code_api_errors.py  test_cli_output_encoding.py  test_config.py  test_diagnose.py  test_doctor.py  test_hardening.py  test_install.py  test_mcp_bridge.py  test_models_endpoint.py  test_models_probe.py  test_native_permission_recovery.py  test_plugin_manifest_consistency.py  test_provider.py  test_provider_vision.py  test_proxy_lifecycle.py  test_request_options.py  test_runtime.py  test_sdk_error_handling.py  test_self_healing_models.py  test_subscription_guards.py  test_tool_choice.py  test_tool_result_replay.py  test_usage_passthrough.py  test_vision_reasoning_and_tools.py
