[project]
name = "hermes-claude-code"
version = "0.1.0"
description = "Hermes model provider backed by Claude Code (local OpenAI-compatible bridge)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Nous Research" }]
dependencies = [
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "uvicorn>=0.49.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
sdk = [
    "claude-agent-sdk>=0.2.110",
]

[project.entry-points."hermes_agent.plugins"]
hermes-claude-code = "hermes_claude_code.plugin:register"

[project.scripts]
hermes-claude-code-proxy = "hermes_claude_code.proxy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_claude_code"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
