[project]
name = "hermes-claude-code"
version = "1.0.0"
description = "Hermes provider for Claude Code subscriptions"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "MrS4k4l" }]
dependencies = [
    "claude-agent-sdk>=0.2.110",
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "uvicorn>=0.49.0",
]

[project.scripts]
hermes-claude-code = "hermes_claude_code.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_claude_code"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
